# ICPC

./: .autocp  .gitignore  CMakeLists.txt  README.md  main.cpp
Basics/: Basics.cpp  Basics.h  DataTypes.cpp  DataTypes.h  Loops.cpp  Strings.cpp
Codeforces/Codeforces - CodeTON Round 9 Div 1  Div 2 Rated Prizes/: A_Shohag_Loves_Mod.cpp  C1_Shohag_Loves_XOR_Easy_Version.cpp
Codeforces/Codeforces - Codeforces Round 986 Div 2/: A_Alices_Adventures_in_Chess.cpp  B_Alices_Adventures_in_Permuting.cpp  C_Alices_Adventures_in_Cutting_Cake.cpp
Codeforces/Codeforces - Codeforces Round 988 Div 3/: A_Twice.cpp  B_Intercepted_Inputs.cpp
Codeforces/Codeforces - Codeforces Round 992 Div 2/: A_Game_of_Division.cpp  B_Paint_a_Strip.cpp
Codeforces/Codeforces - Maraton nacional ACM 2024-II Fase clasificatoria - Categoria Basica/: A_ICFES.cpp  B_Juego_del_agua.cpp  C_Gran_Suma.cpp  E_Formas_de_vestir.cpp
Codeforces/Codeforces - Rayan Programming Contest 2024 - Selection Codeforces Round 989 Div 1  Div 2/: B_Rakhshs_Revival.cpp
Codeforces/Virtual Judge - MUA-202510-05/: A___Li_Hua_and_Maze.cpp
Codeforces/Virtual Judge - MUA-202510-07/: A___Fast_Multiplication.java  D___How_many_trees.cpp
DP/: P1___202510.cpp
ICPC2410/Warmup/: asp.cpp  be.cpp
codeforces/Codeforces - 2025-2026 ICPC Latin American Regional Programming Contest/: F_Fuzzy_Factorization.cpp  H_Harder_Horizons.cpp  J_Judgmental_Crowd.cpp  K_Kings_Conquest.cpp
codeforces/Codeforces - CodeTON Round 9 Div 1  Div 2 Rated Prizes/: B_Shohag_Loves_Strings.cpp
temp/: 717_1-bit_and_2-bit_Characters.cpp  temp.cpp
(+156 files in other folders)
