cmake_minimum_required(VERSION 3.29)
project(icpc)

include_directories(/usr/local/include)

set(CMAKE_CXX_STANDARD 20)


add_executable(C_Alices_Adventures_in_Cutting_Cake "Codeforces/Codeforces - Codeforces Round 986 Div 2/C_Alices_Adventures_in_Cutting_Cake.cpp"
        "Codeforces/Codeforces - Codeforces Round 986 Div 2/C_Alices_Adventures_in_Cutting_Cake.cpp")