cmake_minimum_required(VERSION 3.29)
project(icpc)

include_directories(/usr/local/include)

set(CMAKE_CXX_STANDARD 20)

add_executable(C_Trapped_in_the_Witchs_Labyrinth "Codeforces/Codeforces - Rayan Programming Contest 2024 - Selection Codeforces Round 989 Div 1  Div 2/C_Trapped_in_the_Witchs_Labyrinth.cpp")
